# click-stream-pipeline

./: README.md  main.py  pyproject.toml
src/: __init__.py  broker.py  config_log.py  generator.py  models.py  publisher.py  utils.py  validator.py
src/consumers/: __init__.py  mongo.py  redis.py  validation_consumers.py
tests/: test_pipeline.py
